--- a/foobar/foobar.routing.yml
+++ b/foobar/foobar.routing.yml
@@ -5,9 +5,15 @@ foobar:
   requirements:
     _permission: 'access administration pages'
 foobar.form:
-  pattern: 'foobar/form'
+  pattern: 'admin/foobar/form'
   defaults:
     _form: '\Drupal\foobar\Form\FoobarForm'
+  requirements:
+    _permission: 'access administration pages'
+foobar.drupal_get_form:
+  pattern: 'admin/foobar/drupal_get_form'
+  defaults:
+    _content: '\Drupal\foobar\Controller\FoobarController::foobarDrupalGetFormPage'
   requirements:
     _permission: 'access administration pages'
 foobar.systemconfigformbase:
