--- a/foobar/foobar.routing.yml
+++ b/foobar/foobar.routing.yml
@@ -1,26 +1,26 @@
 foobar:
-  pattern: 'admin/foobar'
+  path: 'admin/foobar'
   defaults:
     _content: '\Drupal\foobar\Controller\FoobarController::foobarPage'
   requirements:
     _permission: 'access administration pages'
 
 foobar.form:
-  pattern: 'admin/foobar/form'
+  path: 'admin/foobar/form'
   defaults:
     _form: '\Drupal\foobar\Form\FoobarForm'
   requirements:
     _permission: 'access administration pages'
 
 foobar.systemconfigformbase:
-  pattern: 'admin/foobar/systemconfigformbase'
+  path: 'admin/foobar/systemconfigformbase'
   defaults:
     _form: '\Drupal\foobar\Form\FoobarConfigForm'
   requirements:
     _permission: 'access administration pages'
 
 foobar.drupal_get_form:
-  pattern: 'admin/foobar/drupal_get_form'
+  path: 'admin/foobar/drupal_get_form'
   defaults:
     _content: '\Drupal\foobar\Controller\FoobarController::foobarDrupalGetFormPage'
   requirements:
